@startuml "ejercicio29"

class Concessionaire {
    - String Name;
    - String NIT;
    - List<Service> listServices;
    - List<Seller> listSellers;
    - List<Car> listCars;

}

class Car {
    - String frameNumber;
    - Float price;
    - Float discount;
    - String technicalData;
    - String power;
    - String brand;
    - String models;
    - String status;
    - String Feactures;
    - Concessionaire concessionaire;
    - List<Equipment> listEquipmets;
    - List<ExtraEquipment> listAvailableExtras;
}

class Equipment {
    - String name;
    - String type;
    - String features;
}

class ExtraEquipment {
    - String name;
    - String price;
}

class Inventory {
    - Concessionaire location;
}

class Client {
    - String name;
    - String lastName;
    - String typeDocument;
    - String numberDocument;
    - Seller seller;
}

class Seller {
    - String name;
    - String lastName;
    - String NIF;
    - String address;
    - Concessionaire concessionaire;
    - List<Client> listClients;
    - List<Sale> listSales;
    - List<Document> listDocuments;

}

class Document {
    - String payMethod;
    - Date date;
    - Client client;
    - Car car;
    - Seller seller;

}

class Service {
    - String name;
    - String address;
    - String NIF;
}

class Sale {
    - String registration;
    - String originCar;
    - Document document;
}


Concessionaire "1" -- "*" Car: Have
Car "1"  -- "*" Equipment: Includes
Car "0" -- "*" ExtraEquipment: Could Have
Concessionaire "1" -- "1" Inventory: Manages
Concessionaire "1" -- "*" Service: Serves
Concessionaire "1" -- "*" Seller: Employs
Document "1" -- "1" Sale: Details
Client "1" -- "1" Document: Is detailed in
Seller "1" -- "*" Client: Serves
Seller "1" -- "*" Sale: Conducts
Document "*" -- "1" Seller: Contain
Car "1" -- "1" Document: Contain

@enduml